2024-02-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-eev-reload-links): new function.
	(find-eev-reload-links): added a (load "~/.emacs.d/init.el").

2024-02-09  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-newbrowser-links): removed a spurious second
	definition of the same function.

2024-02-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-strange-functions-intro): added the section
	"1. Introduction".

	* eev-plinks.el (find-efunctionlgrep, ee-efunctionlgrep-re)
	(ee-efunctionlgrep-re0): new functions.

	* eev-elinks.el (ee-find-efunction-links): use
	`find-efunctionlgrep'.

2024-02-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-strange-functions-intro): new function.
	(find-eev-intro): added `find-strange-functions-intro'.

	* eev-tlinks.el (ee-find-1stclassvideo-links): removed the "super
	technical things".
	(ee-let*-macro-1stclassvideo-c): added `hsubsinit'.
	(ee-let*-macro-1stclassvideo-c, ee-find-1stclassvideo-links):
	added `hasindex' and links to the index.

	* eev-videolinks.el (ee-1stclassvideos-info): added ':index t' to
	several entries.

2024-02-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-1stclassvideo-index)
	(find-1stclassvideo-lsubs, find-1stclassvideo-hsubs)
	(find-1stclassvideo-def, find-1stclassvideo-psne): new aliases.
	(ee-1stclassvideos-dlsubs): small changes.

	* eev-videolinks.el (ee-code-lsubs): added hsubs.

	* eev-tlinks.el (find-1stclassvideohsubs): new function.
	(ee-let*-macro-1stclassvideo-c): added hsubs.
	(ee-find-1stclassvideo-links): added hsubs.

	* eev-videolinks.el (ee-1stclassvideos-info): added ":hsubs"
	entries to many videos.

2024-02-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-eloadhistory-for): use `find-elinks-elisp'
	and `ee-file-name-elc-to-el'.
	(find-lgreps): new function.

	* eev-plinks.el (find-lgrep, ee-find-lgrep)
	(ee-file-name-elc-to-el): new functions.