@@ -1,3 +1,9 @@
+2024-02-18  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-strange-functions.el (ee-sf-1stclassvideo-p): new file.
+
+	* eev-tlinks.el (ee-find-1stclassvideo-links): small changes.
+
 2024-02-17  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-tlinks.el (find-eev-reload-links): new function.
